# python-neutronclient

./: .gitignore  setup.cfg
neutronclient/: client.py  shell.py  version.py
neutronclient/common/: auth_plugin.py  extension.py
neutronclient/tests/unit/: test_auth.py  test_client_extension.py  test_client_extension_discovery.py  test_discover.py
neutronclient/v2_0/: client.py
